数据齿轮版本更新日志

-----------------------------------------
--v1.0.0
-----------------------------------------

数据库管理；
数据管理；
驱动程序管理；
用户管理；
切换肤色；


-----------------------------------------
--v1.1.0
-----------------------------------------

新增：新增数据表格编辑功能，可直接在表格内编辑数据，并支持Ctrl、Shift按键多选；
新增：新增数据添加操作时的批量执行功能，可配合使用“#{index}”表达式一次操作添加多条记录；
新增：新增视图数据管理功能，视图也将显示在数据库表列表中；
改进：数据表格删除操作改为弹出确认对话框而非双击直接删除；
改进：数据表格选择列设置为固定列，不随横向滚动条移动，并支持Shift按键多选；
改进：改进数据保存和删除功能，对于会影响数据库中更多记录的情况，进行提示并可选择是否继续执行；
改进：数据库表列表的“更多...”条目显示已加载表数目和总表数目；
改进：数据库密码信息不再传输至浏览器端，避免敏感信息泄露；
改进：优化数据库表结构信息加载效率；
修复：修复处理时间戳类型字段时精度丢失的BUG；
修复：修复数据编辑表单页面重置按钮未正确恢复初值的BUG；
修复：修复数据表格页面在对某些复合类型字段排序时报错的BUG；
修复：修复用户管理页面表格“邮箱”和“管理员”列值渲染错误的BUG；


-----------------------------------------
--v1.1.1
-----------------------------------------

修复：修复集成软件包在JRE8及以上版本无法正常运行的BUG；


-----------------------------------------
--v1.2.0
-----------------------------------------

新增：SQL工作台功能，可执行SQL语句、展示查询结果；
改进：新窗口打开数据表格选项卡页时，页面元素将填满整个网页；
改进：改进切换选项卡响应效果，避免不必要的表格尺寸调整导致切换卡顿；
修复：修复发送邮件服务器设置白页的BUG；
修复：修复重设密码页面下一步操作白页的BUG；
修复：修复系统退出操作在某些Servlet容器中出现404错误的BUG；
修复：修复关于页面未显示系统版本号的BUG；


-----------------------------------------
--v1.3.0
-----------------------------------------

新增：数据导入/导出功能，支持CSV、SQL、Excel格式数据的导入导出操作；
改进：主页选项卡标签右下角的更多操作区域添加明确图标标识；
改进：主页左侧数据库菜单的表、视图条目替换为更合适的图标；
修复：修复在服务器重启后SQL工作台会自动再次提交上一次执行SQL的BUG；
修复：修复服务端定时清理临时文件服务未正确执行的BUG；