@@ -59,3 +59,4 @@
 改进：主页左侧数据库菜单的表、视图条目替换为更合适的图标；
 修复：修复在服务器重启后SQL工作台会自动再次提交上一次执行SQL的BUG；
 修复：修复服务端定时清理临时文件服务未正确执行的BUG；
+修复：修复MySQL、Oracle数据管理表、字段悬浮提示未显示注释的BUG；
